# aw-watcher-toggl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
aw_watcher_toggl/: __main__.py  main.py
