[tool.poetry]
name = "aw-watcher-toggl"
version = "0.0.1"
description = "Spotify watcher for ActivityWatch"
authors = ["Zach Strout <zachstrout@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/RTnhN/aw-watcher-toggl"

[tool.poetry.scripts]
aw-watcher-toggl = "aw_watcher_toggl:main"

[tool.poetry.dependencies]
python = "^3.7"
aw-client = "^0.5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
