[project]
name = "aw-watcher-toggl"
version = "0.0.1"
description = "Spotify watcher for ActivityWatch"
authors = [
    { name = "Zach Strout", email = "zachstrout@gmail.com" }
]
readme = "README.md"
license = { text = "MPL-2.0" }
requires-python = ">=3.7,<4.0"
dependencies = [
    "aw-client>=0.5.7,<0.6"
]

[project.scripts]
aw-watcher-toggl = "aw_watcher_toggl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
